# Basket_stats

./: .coverage  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  ROADMAP.md  coverage.xml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  roadmap.yml
backend/app/: main.py
docker/: Dockerfile  Dockerfile.backend  nginx.conf
frontend/: index.html
scripts/: update_roadmap.py
tests/: test_detect.py  test_health.py  test_track.py
vision/: __init__.py  detect.py  track.py
