[tool.poetry]
name = "basket-stats"
version = "0.1.0"
description = "Basketball statistics analysis platform"
authors = ["Benoit Bolivard <benoit.bolivard@example.com>"]
readme = "README.md"
packages = [
    {include = "backend"},
    {include = "vision"}
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
sqlalchemy = "^2.0.23"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
opencv-python = "^4.8.1.78"
numpy = "^1.25.2"
pandas = "^2.1.4"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.10"
black = "^24.10.0"
isort = "^5.13.2"
pytest = "^8.4.1"
pytest-asyncio = "^0.23.8"
pre-commit = "^3.8.0"
detect-secrets = "^1.5.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.4.1"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.8"
httpx = "^0.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=backend",
    "--cov=vision",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests"
] 